--- a/src/main/Resources/static/css/style.css
+++ b/src/main/Resources/static/css/style.css
@@ -1478,7 +1478,7 @@ body {
 
 /* ==================================== All_Page_Common Css ======================= */
 .romana_allPage_area {
-  background: url(../images/all_page_bg.jpg);
+  background: url(../images/leafhands.jpg);
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
