Fixing some small issues.

--- a/src/main/Resources/Templates/disasterdetails.html
+++ b/src/main/Resources/Templates/disasterdetails.html
@@ -167,7 +167,7 @@
             <div class="row ">
                 <div class="col-sm-10 col-sm-offset-1">
                     <div class="single_blog">
-                        <div class="blog_img_3" style="background-image:url(static/images/blog-detail.jpg)"></div>
+                        <!--<div class="blog_img_3" style="background-image:url(static/images/blog-detail.jpg)"></div>-->
                         <div class="single_blog_text">
                             <a href="disasterdetails.html"><h3 th:text="${fields.name}">Name</h3></a>
                             <div class="blog_btns">
