--- a/src/main/Resources/Templates/disasterdetails.html
+++ b/src/main/Resources/Templates/disasterdetails.html
@@ -232,26 +232,66 @@
                     <!-- romana_news_comments end -->
                     <div class="comment_form common_input">
                         <h3>WRITE A COMMENT</h3>
-                        <form action="https://formspree.io/crazycafe@gmail.com" method="POST">
+                        <form th:action="@{/}" th:object="${newComment}" method="post">
+                            <div class="common_input Volunteer_input">
+                                <h2>Become a Volunteer</h2>
+                                <div class="row">
+                                    <div class="col-sm-6">
+                                        <input th:name="firstName" th:field="*{firstName}" type="text" placeholder="Name">
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <input th:name="lastName" th:field="*{lastName}" type="text" placeholder="Name">
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <input th:name="email" th:field="*{email}" type="text" placeholder="Email">
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <input th:name="phone" th:field="*{phone}" type="text" placeholder="Phone">
+                                    </div>
+                                    <div class="col-sm-6">
+                                        <input th:name="message" th:field="*{message}" type="text" placeholder="Message">
+                                    </div>
+                                    <!--<div class="col-sm-6">-->
+                                        <!--<input th:name="dateAvailable" th:field="*{dateAvailable}" type="text" placeholder="Date Available">-->
+                                    <!--</div>-->
+                                    <!--<div class="col-sm-6">-->
+                                        <!--<input th:name="volunteerOffering" th:field="*{volunteerOffering}" type="text" placeholder="Volunteer Offering">-->
+                                    <!--</div>-->
+                                    <!--<div class="col-sm-6">-->
+                                    <!--<input type="email" name="check_last_name" placeholder="Email">-->
+                                    <!--</div>-->
+                                </div>
+                                <!--<div class="row">-->
+                                <!--<div class="col-sm-6">-->
+                                <!--<div class="select_option_one">-->
+                                <!--<select name="userSelect2" id="userSelect2" class="">-->
+                                <!--<option value="1">Gender</option>-->
+                                <!--<option value="2">Male</option>-->
+                                <!--<option value="3">Femail</option>-->
+                                <!--</select>-->
+                                <!--</div>-->
+                                <!--</div>-->
+                                <!--<div class="col-sm-6">-->
+                                <!--<div class="select_option_one">-->
+                                <!--<select name="userSelect" id="userSelect" class="">-->
+                                <!--<option value="1">Country</option>-->
+                                <!--<option value="2">Bangladesh</option>-->
+                                <!--<option value="3">Unitade Sate</option>-->
+                                <!--</select>-->
+                                <!--</div>-->
+                                <!--</div>-->
+                            </div>
                             <div class="row">
-                                <div class="col-sm-6">
-                                    <label for="firstName">First Name:</label>
-                                    <input type="text" name="firstName" id="firstName" placeholder="Ex:">
-                                    <label for="phoneNumber">phone here:</label>
-                                    <input type="text" name="phoneNumber" id="phoneNumber" placeholder="Ex:">
-                                    <label for="email">email here:</label>
-                                    <input type="email" name="email" id="email" placeholder="Ex:">
-                                </div>
-                                <div class="col-sm-6">
-                                    <label for="email">Message here:</label>
-                                    <textarea name="c_textarea" id="c_textarea" cols="30" rows="10" placeholder="Message here...."></textarea>
-                                </div>
-
                                 <div class="col-sm-12">
-                                    <button type="submit" class="common_btn hvr-sweep-to-bottom" name="sumit">SEND MESSAGE</button>
+                                    <!--<textarea name="c_textarea" id="c_textarea" cols="30" rows="10" placeholder="Message..."></textarea>-->
+                                    <div class="sub_submit">
+                                        <button type="submit" class="common_btn hvr-sweep-to-bottom" name="sumit">Apply Now<i class="fa fa-long-arrow-right"></i></button>
+                                    </div>
                                 </div>
                             </div>
-                        </form>
+                    </div>
+
+                    </form>
                     </div>
                 </div>
                 <!-- column End -->
