Create Donation class as well as NewDonation class.

--- a/src/main/Resources/static/css/style.css
+++ b/src/main/Resources/static/css/style.css
@@ -2188,7 +2188,7 @@ body {
     width: 10000px;
     z-index: -1; }
   .romana_donate_bg_area:before {
-    background-image: url("../images/man.png");
+    background-image: url("../images/sprout1.jpeg");
     background-repeat: no-repeat;
     bottom: -73px;
     left: 50%;
