donation html comment out hard coded code.

--- a/src/main/Resources/Templates/donation.html
+++ b/src/main/Resources/Templates/donation.html
@@ -169,13 +169,13 @@
                         <div class="inner">
                             <form action="https://formspree.io/crazycafe@gmail.com" method="POST">
                                 <h3>How much would you like to donate?</h3>
-                                <div class="custom_donate">
-                                    <input type="text" placeholder="Custome donate">
-                                    <a href="#" class="active">$50</a>
-                                    <a href="#">$60</a>
-                                    <a href="#">$70</a>
-                                    <a href="#">$80</a>
-                                </div>
+                                <!--<div class="custom_donate">-->
+                                    <!--<input type="text" placeholder="Custome donate">-->
+                                    <!--<a href="#" class="active">$50</a>-->
+                                    <!--<a href="#">$60</a>-->
+                                    <!--<a href="#">$70</a>-->
+                                    <!--<a href="#">$80</a>-->
+                                <!--</div>-->
                                 <h3>Carefully fill up this form.</h3>
                                 <div class="row">
                                     <div class="col-sm-6">
