--- a/src/main/Resources/Templates/index.html
+++ b/src/main/Resources/Templates/index.html
@@ -75,7 +75,7 @@
                     <a href="https://twitter.com/reliefweb"><i class="fa fa-twitter" aria-hidden="true"></i></a>
                     <a href="https://www.linkedin.com/company/reliefweb"><i class="fa fa-skype" aria-hidden="true"></i></a>
                     <a href="https://www.youtube.com/channel/UC4RQutFVU_1OSNtOzGyBfGw"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
-                    <a href="donation.html" class="common_btn hvr-sweep-to-bottom">DONATE NOW</a>
+
                 </div>
                 <!-- column End -->
             </div>
@@ -149,8 +149,7 @@
                     <div class="col-xs-12">
                         <div class="romana_hero_text">
                             <h1>Replanting hope, around the world and in your neighborhood.</h1>
-                            <a href="donation.html" class="hvr-sweep-to-bottom common_btn">Donate Now <i
-                                    class="fa fa-long-arrow-right"></i></a>
+                            <a th:href="@{/donation/} + ${fieldsList.get(0).id}" class="donate_btn hvr-sweep-to-bottom">Donate to most recent cause</a>
                         </div>
                     </div>
                     <!-- column end -->
